tests/errors/UnknownIdentifier3.q
main() {
	x := 1 + f(x)
}

f(x int) -> int {
	return x
}